vmware/tkgm/instruction01/manifests/service02.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test01
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
