vmware/tkgm/instruction01/manifests/ingress01.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: test01
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "test-web.hybrid.jp"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
